--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         REGISTRY = "docker.io"
         DOCKER_CREDENTIALS_ID = "docker-hub-creds"
         GITHUB_CREDENTIALS_ID = "github"
-        APP_DIR = "/opt/docker-kec"
+        APP_DIR = "/home/vboxuser/jenkins"  // Correct path where the Dockerfile is
     }
 
     stages {
@@ -19,6 +19,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
+                    // Ensure the directory is correct and Dockerfile exists
                     sh "cd $APP_DIR && docker build -t $IMAGE_NAME:latest ."
                 }
             }
@@ -27,7 +28,7 @@ pipeline {
         stage('Login to Docker Registry') {
             steps {
                 script {
-                    withCredentials([usernamePassword(credentialsId: DOCKER_CREDENTIALS_ID, usernameVariable: 'elango7666', passwordVariable: 'Elango@5659')]) {
+                    withCredentials([usernamePassword(credentialsId: DOCKER_CREDENTIALS_ID, usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                         sh 'echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin'
                     }
                 }
@@ -45,6 +46,7 @@ pipeline {
         stage('Deploy using Docker Compose') {
             steps {
                 script {
+                    // Make sure the Docker Compose file is in the right directory
                     sh "cd $APP_DIR && docker-compose down && docker-compose up -d"
                 }
             }
@@ -53,7 +55,7 @@ pipeline {
 
     post {
         success {
-            echo 'Pipeline executed successfully! '
+            echo 'Pipeline executed successfully!'
         }
         failure {
             echo 'Pipeline failed! Check the logs for errors.'
