--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         REGISTRY = "docker.io"
         DOCKER_CREDENTIALS_ID = "docker-hub-creds"
         GITHUB_CREDENTIALS_ID = "github"
-        APP_DIR = "/home/vboxuser/jenkins"  // Correct path where the Dockerfile is
+        APP_DIR = "${env.WORKSPACE}/jenkins"  // Use Jenkins workspace path
     }
 
     stages {
@@ -19,7 +19,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Ensure the directory is correct and Dockerfile exists
+                    // Ensure the directory exists inside the Jenkins workspace
                     sh "cd $APP_DIR && docker build -t $IMAGE_NAME:latest ."
                 }
             }
@@ -46,7 +46,7 @@ pipeline {
         stage('Deploy using Docker Compose') {
             steps {
                 script {
-                    // Make sure the Docker Compose file is in the right directory
+                    // Make sure Docker Compose is executed from the correct directory in the Jenkins workspace
                     sh "cd $APP_DIR && docker-compose down && docker-compose up -d"
                 }
             }
