--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,24 +6,20 @@ pipeline {
         REGISTRY = "docker.io"
         DOCKER_CREDENTIALS_ID = "docker-hub-creds"
         GITHUB_CREDENTIALS_ID = "github"
+        APP_DIR = "/opt/docker-kec"
     }
 
     stages {
         stage('Checkout Code') {
             steps {
-                checkout scm
+                git credentialsId: GITHUB_CREDENTIALS_ID, url: 'https://github.com/elangovand7666/jenkins.git', branch: 'main'
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Handle path with spaces correctly by quoting it
-                    def appDir = "${env.WORKSPACE}/jenkins"  // Dynamically use the workspace location
-                    sh """
-                    cd "${appDir}"
-                    docker build -t $IMAGE_NAME:latest .
-                    """
+                    sh "docker build -t $IMAGE_NAME:latest ."
                 }
             }
         }
@@ -49,13 +45,7 @@ pipeline {
         stage('Deploy using Docker Compose') {
             steps {
                 script {
-                    // Handle path with spaces correctly by quoting it
-                    def appDir = "${env.WORKSPACE}/jenkins"  // Dynamically use the workspace location
-                    sh """
-                    cd "${appDir}"
-                    docker-compose down
-                    docker-compose up -d
-                    """
+                    sh "docker-compose up -d"
                 }
             }
         }
@@ -63,7 +53,7 @@ pipeline {
 
     post {
         success {
-            echo 'Pipeline executed successfully!'
+            echo 'Pipeline executed successfully! '
         }
         failure {
             echo 'Pipeline failed! Check the logs for errors.'
